Update note about Ubuntu maven errors
Signed-off-by: Shay Gordon <moebius.le.roi@gmail.com>